# csgames-2017-cscoin-miner

./: .editorconfig  Dockerfile  README.md  cscoin-challenge-parameters.c  cscoin-challenge-parameters.h  cscoin-challenge-type.c  cscoin-challenge-type.h  cscoin-challenge.vala  cscoin-heap64.c  cscoin-heap64.h  cscoin-miner.vala  cscoin-mt64.c  cscoin-mt64.h  cscoin-solver.c  cscoin-solver.h  cscoin-solver.vapi  cscoin-wallet.vala  meson.build  openssl.vapi  run.sh
benchmarks/: meson.build  solver-benchmark.vala
contrib/libastar/: .editorconfig  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  meson.build
contrib/libastar/.svn/: all-wcprops  dir-prop-base  entries
contrib/libastar/.svn/text-base/: ChangeLog.svn-base  Makefile.am.svn-base  NEWS.svn-base  configure.ac.svn-base
contrib/libastar/debian/: copyright  libastar0.install  shlibs.local.ex
contrib/libastar/debian/.svn/: all-wcprops  dir-prop-base  entries
contrib/libastar/debian/.svn/text-base/: changelog.svn-base  control.svn-base  libastar-dev.examples.svn-base  libastar.doc-base.EX.svn-base  rules.svn-base
contrib/libastar/src/: Makefile.am  Makefile.in  astar.c  astar.h  astar_heap.c  astar_heap.h  example.c  gmon.out  libastar.pc.in
contrib/libastar/src/.svn/: all-wcprops  dir-prop-base  entries
contrib/libastar/src/.svn/text-base/: astar_heap.c.svn-base
contrib/mt19937-64/: meson.build
tests/: meson.build  solver-test.vala
